--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rotamanagementsystem",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://brianpenrose.github.io/RotaManagementSystem", 
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+  
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.11",
